# flexric

./: CMakeLists.txt
examples/: CMakeLists.txt
examples/emulator/: CMakeLists.txt
examples/emulator/agent/: CMakeLists.txt  sm_zxc.c  sm_zxc.h  test_agent.c
examples/http_json_example/: CMakeLists.txt  http_json_example.c
examples/ric/: near_ric.c
examples/xApp/c/ctrl/: CMakeLists.txt  ind_ctrl.c  mac_ctrl.c
examples/xApp/c/monitor/: xapp_gtp_mac_rlc_pdcp_moni.c
src/agent/: e2_agent.c  msg_handler_agent.c
src/lib/msg_hand/: reg_e2_nodes.c
src/ric/: msg_handler_ric.c
src/ric/iApps/: influx.c  redis.c  stdout.c  string_parser.c  string_parser.h
src/sm/: CMakeLists.txt
src/sm/agent_if/ans/: sm_ag_if_ans.h
src/sm/agent_if/read/: sm_ag_if_rd.c  sm_ag_if_rd.h
src/sm/agent_if/write/: sm_ag_if_wr.h  subscribe_timer.h
src/sm/zxc_sm/: CMakeLists.txt  zxc_sm_agent.c  zxc_sm_agent.h  zxc_sm_id.h  zxc_sm_ric.c  zxc_sm_ric.h
src/sm/zxc_sm/dec/: zxc_dec_asn.c  zxc_dec_asn.h  zxc_dec_fb.c  zxc_dec_fb.h  zxc_dec_generic.h  zxc_dec_plain.c  zxc_dec_plain.h
src/sm/zxc_sm/enc/: zxc_enc_asn.c  zxc_enc_asn.h  zxc_enc_fb.c  zxc_enc_fb.h  zxc_enc_generic.h  zxc_enc_plain.c  zxc_enc_plain.h
src/sm/zxc_sm/ie/: zxc_data_ie.c  zxc_data_ie.h
src/sm/zxc_sm/test/: CMakeLists.txt  main.c
src/util/: CMakeLists.txt
src/util/http_json/: CMakeLists.txt  http_client.c  http_client.h  json_parser.c  json_parser.h
src/xApp/: CMakeLists.txt  e42_xapp.c  e42_xapp_api.c  msg_handler_xapp.c  plugin_ric.c  sm_ran_function_def.c  sm_ran_function_def.h
src/xApp/db/sqlite3/: sqlite3_wrapper.c
src/xApp/swig/: CMakeLists.txt  swig_wrapper.cpp  swig_wrapper.h  swig_wrapper.i
test/agent-ric/: test_near_ric.c
test/agent-ric-xapp/: CMakeLists.txt  test_ag_ric_xapp.c
test/rnd/: enb.conf  fill_rnd_data_zxc.c  fill_rnd_data_zxc.h
test/sm/zxc_sm/: CMakeLists.txt  main.c
